[gd_scene load_steps=14 format=2]

[ext_resource path="res://ASSETS/fonts/amstrad_cpc464.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ASSETS/fonts/PressStart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ASSETS/sounds/cheats.mp3" type="AudioStream" id=3]
[ext_resource path="res://scripts/menu/Difficulty.gd" type="Script" id=4]
[ext_resource path="res://scripts/menu/Cheats.gd" type="Script" id=5]
[ext_resource path="res://scripts/menu/LevelName.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[node name="Cheats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 0.353546
margin_right = 1280.35
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.0470588, 0.772549, 0.0470588, 1 )
custom_fonts/font = SubResource( 1 )
text = "CHEATS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodModeLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 684.0
margin_bottom = 230.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
text = "CHEATS_GODMODE"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodModeButton" type="Button" parent="GodModeLabel"]
margin_left = 480.0
margin_right = 1164.0
margin_bottom = 38.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HyperspeedLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 256.0
margin_right = 684.0
margin_bottom = 294.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
text = "CHEATS_HYPERSPEED"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HyperspeedButton" type="Button" parent="HyperspeedLabel"]
margin_left = 480.0
margin_right = 1164.0
margin_bottom = 38.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfiniteTimeLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 684.0
margin_bottom = 358.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
text = "CHEATS_INFINITETIME"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfiniteTimeButton" type="Button" parent="InfiniteTimeLabel"]
margin_left = 480.0
margin_right = 1164.0
margin_bottom = 38.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoonwalkLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 384.0
margin_right = 684.0
margin_bottom = 422.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
text = "CHEATS_MOONWALK"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoonwalkButton" type="Button" parent="MoonwalkLabel"]
margin_left = 480.0
margin_right = 1164.0
margin_bottom = 38.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoonjumpLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 684.0
margin_bottom = 486.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
text = "CHEATS_MOONJUMP"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoonjumpButton" type="Button" parent="MoonjumpLabel"]
margin_left = 480.0
margin_right = 1164.0
margin_bottom = 38.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingInfo" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 6 )
text = "##########"
align = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToMenu" type="Button" parent="."]
margin_right = 108.0
margin_bottom = 30.0
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/focus = SubResource( 4 )
shortcut_in_tooltip = false
text = "SETTINGS_RETURN"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true

[connection signal="mouse_entered" from="GodModeLabel" to="SettingInfo" method="_on_GodModeLabel_mouse_entered"]
[connection signal="mouse_exited" from="GodModeLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="GodModeLabel/GodModeButton" to="." method="_on_GodModeButton_toggled"]
[connection signal="mouse_entered" from="HyperspeedLabel" to="SettingInfo" method="_on_HyperspeedLabel_mouse_entered"]
[connection signal="mouse_exited" from="HyperspeedLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="HyperspeedLabel/HyperspeedButton" to="." method="_on_HyperspeedButton_toggled"]
[connection signal="mouse_entered" from="InfiniteTimeLabel" to="SettingInfo" method="_on_InfiniteTimeLabel_mouse_entered"]
[connection signal="mouse_exited" from="InfiniteTimeLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="InfiniteTimeLabel/InfiniteTimeButton" to="." method="_on_InfiniteTimeButton_toggled"]
[connection signal="mouse_entered" from="MoonwalkLabel" to="SettingInfo" method="_on_MoonwalkLabel_mouse_entered"]
[connection signal="mouse_exited" from="MoonwalkLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="MoonwalkLabel/MoonwalkButton" to="." method="_on_MoonwalkButton_toggled"]
[connection signal="mouse_entered" from="MoonjumpLabel" to="SettingInfo" method="_on_MoonjumpLabel_mouse_entered"]
[connection signal="mouse_exited" from="MoonjumpLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="MoonjumpLabel/MoonjumpButton" to="." method="_on_MoonjumpButton_toggled"]
[connection signal="pressed" from="ReturnToMenu" to="." method="_on_ReturnToMenu_pressed"]
